[gd_scene load_steps=10 format=3 uid="uid://bmsebc0vv0uql"]

[ext_resource type="Script" path="res://scripts/forest_zone.gd" id="1_05smd"]
[ext_resource type="Texture2D" uid="uid://110os3fbjmse" path="res://assets/fb1.png" id="2_yl1ds"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8lf8"]
size = Vector2(605.714, 537.143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tnwuk"]
size = Vector2(205.714, 2720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_waphc"]
size = Vector2(1417.14, 571.429)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2nhc"]
size = Vector2(3531.43, 417.147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxyix"]
size = Vector2(1554.28, 171.429)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crraj"]
size = Vector2(720.002, 1211.43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_576co"]
size = Vector2(925.716, 411.429)

[node name="ForestZone" type="Node2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_05smd")

[node name="ForestZoneBackground" type="Sprite2D" parent="."]
position = Vector2(2400, -952)
texture = ExtResource("2_yl1ds")

[node name="ZoneTransitionA" type="Area2D" parent="."]
position = Vector2(376, 616)

[node name="ZoneCollisionA" type="CollisionShape2D" parent="ZoneTransitionA"]
position = Vector2(-238.857, -170.286)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_r8lf8")

[node name="ZoneTransitionB" type="Area2D" parent="."]
position = Vector2(4232, -2480)

[node name="ZoneCollisionB" type="CollisionShape2D" parent="ZoneTransitionB"]
position = Vector2(2.28613, -102.857)
shape = SubResource("RectangleShape2D_r8lf8")

[node name="SpawnArea1" type="Area2D" parent="."]
position = Vector2(4628.57, -902.857)

[node name="SpawnCollision1" type="CollisionShape2D" parent="SpawnArea1"]
position = Vector2(34.2861, 68.5715)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_tnwuk")

[node name="SpawnArea2" type="Area2D" parent="."]
position = Vector2(1737.14, 217.143)

[node name="SpawnCollision2" type="CollisionShape2D" parent="SpawnArea2"]
position = Vector2(102.858, 68.5714)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_waphc")

[node name="SpawnArea3" type="Area2D" parent="."]
position = Vector2(1794.29, -2274.29)

[node name="SpawnCollision3" type="CollisionShape2D" parent="SpawnArea3"]
position = Vector2(17.1434, -14.2834)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_l2nhc")

[node name="SpawnArea4" type="Area2D" parent="."]
position = Vector2(1965.71, -194.286)

[node name="SpawnCollision4" type="CollisionShape2D" parent="SpawnArea4"]
position = Vector2(205.717, 62.8573)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_cxyix")

[node name="SpawnArea5" type="Area2D" parent="."]
position = Vector2(297.143, -1634.29)

[node name="SpawnCollision5" type="CollisionShape2D" parent="SpawnArea5"]
position = Vector2(120, 160.004)
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_crraj")

[node name="SpawnArea6" type="Area2D" parent="."]
position = Vector2(880, -1897.14)

[node name="SpawnCollision6" type="CollisionShape2D" parent="SpawnArea6"]
position = Vector2(360, 34.283)
scale = Vector2(0.999998, 0.999998)
shape = SubResource("RectangleShape2D_576co")

[connection signal="body_entered" from="ZoneTransitionA" to="." method="_on_ZoneTransitionA_body_entered"]
[connection signal="body_entered" from="ZoneTransitionB" to="." method="_on_ZoneTransitionB_body_entered"]
